--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     charset: UTF-8
     location: classpath:/banners/banner.txt
   datasource:
-    url: jdbc:mysql://tlaloc-son.com:3310/prueba?useSSL=false
+    url: jdbc:mysql://tlaloc-son.com:3310/prueba?useSSL=false&noAccessToProcedureBodies=true
     username: personal
     password: QwrAsf124
   thymeleaf:
@@ -26,6 +26,9 @@ spring:
     filter: 
       order: -100
 server:
+  servlet:
+      context-path: /personal
+  port: 8087  
   error:
     whitelabel:
       enabled: true
